# nyshporka

./: CMakeLists.txt  README.md  main.cpp
data/: config.cfg
include/: BSONPage.h  config_parser.h  db_connector.h  exceptions.h  timed_pqueue.h
src/: BSONPage.cpp  config_parser.cpp  crawler.cpp  db_connector.cpp  main.cpp  nysh_search.cpp  task_manager.cpp
testing/: measure_efficiency.py
